Thu Jan 21 01:50:30 UTC 2010  Abdul Sowayan  <sowayan@gmail.com>

        * orbsvcs/tests/Bug_3215_Regression/client.cpp:

          Added "include "tao/PI/PI.h" to the file to allow
          this test to pass on the iPhone Simulator. The
          inclusion of PI.h is rquired for static builds.

Thu Jan 21 01:45:41 UTC 2010  Abdul Sowayan  <sowayan@gmail.com>

        * orbsvcs/tests/Bug_3216_Regression/client.cpp:

          Added "include "tao/PI/PI.h" to the file to allow
          this test to pass on the iPhone Simulator. The
          inclusion of PI.h is rquired for static builds.

Wed Jan 20 19:19:19 UTC 2010  Olli Savia  <ops@iki.fi>

        * orbsvcs/ImplRepo_Service/Activator_Options.cpp:
          Fixed compile warning.

Wed Jan 20 15:15:02 UTC 2010  Abdul Sowayan  <sowayan@gmail.com>

        * MPC/config/tao_idl_fe.mpb:
        * TAO_IDL/tao_idl_fe.mpc:
        * orbsvcs/IFR_Service/IFR_Service.mpc:

          Build the IFR_Service executable on cross-build platforms.
          This will allow more tests to pass on the iPhone Simulator.
          According to Johnny Willemsen, there is no reason not to build
          IFR_Service executable on cross-build platforms.

Wed Jan 20 09:09:19 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/fe/lex.yy.cpp:
        * TAO_IDL/util/utl_global.cpp:
          Const changes

Tue Jan 19 14:56:19 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_interface.cpp
        * TAO_IDL/be/be_visitor_component/context_ex_idl.cpp
        * TAO_IDL/be/be_visitor_component/context_svh.cpp
        * TAO_IDL/be/be_visitor_component/context_svs.cpp
        * TAO_IDL/be/be_visitor_component/servant_svh.cpp
        * TAO_IDL/be/be_visitor_component/servant_svs.cpp
          Generate the correct type for the AMI4CCM implied methods

Tue Jan 19 14:32:19 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_produce.cpp:
          Don't call the ami4ccm preprocessor
