@@ -3261,11 +3261,11 @@ idl_store_pragma (char *buf)
       // split up data type and key strings
       char *sample_type = tmp;
       while (*tmp && !isspace (*tmp))
-        tmp++;
+        ++tmp;
       while (isspace (*tmp))
         {
           *tmp = '\0';
-          tmp++;
+          ++tmp;
         }
       char *key = tmp;
 
@@ -3283,6 +3283,11 @@ idl_store_pragma (char *buf)
     {
       idl_global->dcps_gen_zero_copy_read (true);
     }
+  else if (ACE_OS::strncmp (buf + 8, "ciao lem", 8) == 0)
+    {
+      char *tmp = idl_get_pragma_string (buf);
+      idl_global->add_ciao_lem_file_names (tmp);
+    }
 }
 
 /*
@@ -3291,17 +3296,17 @@ idl_store_pragma (char *buf)
 static ACE_CDR::Long
 idl_atoi(char *s, long b)
 {
-  long    r = 0;
+  long r = 0;
 
   // Skip over the dash and possibly spaces after the dash
   while (*s == '-' || *s == ' ' || *s == '\t')
     {
-      s++;
+      ++s;
     }
 
   if (b == 8 && *s == '0')
     {
-      s++;
+      ++s;
     }
   else if (b == 16 && *s == '0' && (*(s + 1) == 'x' || *(s + 1) == 'X'))
     {
@@ -3341,7 +3346,7 @@ idl_atoui(char *s, long b)
 
   if (b == 8 && *s == '0')
     {
-      s++;
+      ++s;
     }
   else if (b == 16 && *s == '0' && (*(s + 1) == 'x' || *(s + 1) == 'X'))
     {
@@ -3388,37 +3393,37 @@ idl_atof (char *s)
       // Skip over the dash and possibly spaces after the dash
       while (*s == '-' || *s == ' ' || *s == '\t')
         {
-          s++;
+          ++s;
         }
     }
 
   while (*s >= '0' && *s <= '9')
     {
       d = (d * 10) + *s - '0';
-      s++;
+      ++s;
     }
 
   if (*s == '.')
     {
-      s++;
+      ++s;
       e = 10;
 
       while (*s >= '0' && *s <= '9')
         {
           d += (*s - '0') / (e * 1.0);
           e *= 10;
-          s++;
+          ++s;
         }
     }
 
   if (*s == 'e' || *s == 'E')
     {
-      s++;
+      ++s;
 
       if (*s == '-')
         {
             negexp = 1;
-            s++;
+            ++s;
         }
       else if (*s == '+')
         {
